--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 fastapi = "^0.105.0"
 uvicorn = "^0.24.0.post1"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
