--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ fastapi = "^0.105.0"
 uvicorn = "^0.24.0.post1"
 python-dotenv = "^1.0.0"
 pre-commit = "^3.6.0"
+mypy = "^1.7.1"
 
 
 [build-system]
