--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -1,4 +1,4 @@
-name: Mypy
+name: Coding style cleanup
 
 on: [push]
 
@@ -21,3 +21,7 @@ jobs:
       - name: mypy
         run: |
           poetry run mypy sky_alert/
+      - name: Lint with flake8
+        run: |
+          poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
