--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,3 +3,8 @@ repos:
     rev: 23.7.0
     hooks:
     - id: black
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: '4daa14b'
+    hooks:
+    -   id: mypy
+        args: [--strict, --ignore-missing-imports]
