--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,3 +8,4 @@ repos:
     hooks:
     -   id: mypy
         args: [--strict, --ignore-missing-imports]
+        additional_dependencies: [types-requests==2.31.0]
