--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -1,10 +1,6 @@
 name: Python Unit Tests
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [push]
 
 permissions:
   contents: read
@@ -20,7 +16,7 @@ jobs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
-        python-version: "3.10"
+        python-version: 3.11
     - name: Install Poetry
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
