--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ exclude = '''
 '''
 
 [tool.mypy]
-python_version = "3.11"  # Replace with your Python version
+python_version = "3.11" 
 disallow_untyped_defs = true
 ignore_missing_imports = true
 plugins = ["pydantic.mypy"]
