--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,4 +46,6 @@ exclude = '''
 python_version = "3.11" 
 disallow_untyped_defs = true
 ignore_missing_imports = true
-plugins = ["pydantic.mypy"]
+plugins = [
+  "pydantic.mypy"
+  ]
